# PyBioGateway

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  test_script.py
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml  setup-checkpoint.cfg  test_script-checkpoint.py
docs/: CONTRIBUTING.md  EXAMPLE.ipynb  EXAMPLE_USAGE.ipynb  First_case.ipynb  PyBioGateway functions documentation.md  PyBioGateway_functions.MD  README.md  Second_case.ipynb  Untitled.ipynb  index.md
docs/.ipynb_checkpoints/: First_case-checkpoint.ipynb  PyBioGateway_functions-checkpoint.MD  README-checkpoint.md  Second_case-checkpoint.ipynb  Untitled-checkpoint.ipynb  index-checkpoint.html  index-checkpoint.md
docs/source/: conf.py  index.rst
docs/source/.ipynb_checkpoints/: conf-checkpoint.py
src/BioGatewayQuery/: __init__.py  core.py
src/BioGatewayQuery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/BioGatewayQuery.egg-info/.ipynb_checkpoints/: PKG-INFO-checkpoint  requires-checkpoint.txt  top_level-checkpoint.txt
src/BioGatewayQuery/.ipynb_checkpoints/: core-checkpoint.py
src/BioGatewayQuery_package/: __init__.py  core.py  utils.py
src/PyBioGateway/: core.py
src/PyBioGateway.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/PyBioGateway/.ipynb_checkpoints/: __init__-checkpoint.py  core-checkpoint.py  utils-checkpoint.py
tests/: Untitled.ipynb  test_core.py  test_type_data.ipynb
tests/.ipynb_checkpoints/: test_core-checkpoint.py
