[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BioGatewayQuery"
version = "0.0.1"
authors = [
  { name="Alberto", email="alberto.hernandezh@um.es" },
]
description = "A Python package to perform SPARQL queries and exploit the data available on BioGateway."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdflib",
    "SPARQLWrapper"
]

[project.urls]
Homepage = "https://github.com/AlbertoHernandezHidalgo/BioGatewayQuery_python/"
Issues = "https://github.com/AlbertoHernandezHidalgo/BioGatewayQuery_python/issues"
