[metadata]
name = PyBioGateway
version = 0.0.1
author = Alberto Hernandez
author_email = alberto.hernandezh@um.es
description = A Python package to perform SPARQL queries and exploit the data available on BioGateway.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlbertoHernandezHidalgo/PyBioGateway/
project_urls =
    Homepage = https://github.com/AlbertoHernandezHidalgo/PyBioGateway/
    Issues = https://github.com/AlbertoHernandezHidalgo/PyBioGateway/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    SPARQLWrapper

[options.packages.find]
where = src
